fix background video issue on iphone

--- a/src/pages/HomePage.css
+++ b/src/pages/HomePage.css
@@ -16,6 +16,12 @@
   object-fit: cover;
   z-index: -1;
   opacity: 0.7;
+
+  pointer-events: none;
+  -webkit-user-drag: none;
+  -webkit-touch-callout: none;
+
+
 }
 
 .overlay {
